--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -282,6 +282,65 @@ nav {
     padding: 80px 70px;
 }
 
+.footer {
+    width: 100%;
+    min-height: 45vh;
+    background: radial-gradient(circle at top, #12001f, #000000);
+    border-top: 10px solid #4a0a8a;
+    padding: 70px 8%;
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: 1.5fr repeat(4, 1fr);
+    gap: 60px;
+    color: #dcdcdc;
+}
+
+/* BRAND */
+.footer-logo {
+    font-size: 38px;
+    font-weight: 900;
+    color: white;
+}
+
+.footer-logo span {
+    color: #6d23b8;
+}
+
+.social-icons {
+    margin-top: 20px;
+    display: flex;
+    gap: 14px;
+    font-size: 18px;
+    opacity: 0.8;
+}
+
+/* COLUMNS */
+.footer-col h4 {
+    color: #7a39ff;
+    font-size: 16px;
+    margin-bottom: 18px;
+}
+
+.footer-col ul {
+    list-style: none;
+}
+
+.footer-col li {
+    margin-bottom: 12px;
+    font-size: 14.5px;
+    color: #bcbcbc;
+    cursor: pointer;
+    transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.footer-col li:hover {
+    color: #ffffff;
+    transform: translate(4px);
+}
+
+
 .video-wrapper {
     position: relative;
     width: 60%;
