--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -171,10 +171,33 @@ body {
     transform: translateX(5px);
     border-radius: 8px;
 }
-
-.nav-link{
+.nav-item{
     text-decoration: none;
 }
+
+/* Parent active (Buy / Trade) */
+.nav-dropdown.active > .nav-dropdown-trigger {
+  color: #a855f7;
+}
+
+.nav-dropdown.active > .nav-dropdown-trigger .nav-arrow {
+  transform: rotate(0deg);
+}
+
+/* Dropdown links */
+.dropdown-link {
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+  color: #ccc;
+}
+
+.dropdown-link.active {
+  background: rgba(132, 0, 255, 0.687);
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(132, 0, 255, 0.687);
+}
+
 
 
 
@@ -497,78 +520,3 @@ body {
     display: none;
 }
 
-/* RESPONSIVE */
-@media (max-width:900px) {
-    .hero {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        padding-right: 0;
-        padding-top: 300px;
-        gap: 20px;
-    }
-
-    .hero-text {
-        margin-left: auto;
-        text-align: center;
-    }
-
-    .hero2 {
-        align-items: center;
-        text-align: center;
-        padding: 0 6%;
-    }
-
-    .hero2 .header {
-        font-size: 26px;
-    }
-
-    .hero2 .body {
-        font-size: 14px;
-    }
-
-    .hero2-content {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .hero2-img img {
-        width: 70%;
-    }
-
-    .hero3 {
-        justify-content: center;
-        text-align: center;
-        padding: 60px 30px;
-        flex-wrap: wrap;
-    }
-
-    .hero3-content {
-        max-width: 100%;
-    }
-
-    .info-box {
-        width: 100%;
-    }
-
-    .stats-card {
-        width: 90%;
-        max-width: 360px;
-    }
-
-    .nav-left .nav-item {
-        display: none;
-    }
-
-    .ul-nav-right {
-        display: none;
-    }
-
-    .hamburger {
-        display: block;
-    }
-
-    .video-wrapper {
-        width: 90%;
-    }
-}
