--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -138,8 +138,8 @@ body {
 
 .nav-dropdown-menu li {
     list-style: none;
-    padding: 14px 24px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+    padding: 10px 24px;
+    border-bottom: 1px solid rgba(248, 248, 248, 0.123);
     transition: background 0.25s ease, transform 0.2s ease;
 }
 
@@ -159,6 +159,15 @@ body {
     font-size: 11px;
     opacity: 0.7;
     margin-top: 3px;
+}
+.tools{
+    display: grid;
+      grid-template-columns: repeat(2,auto); 
+      grid-template-rows: repeat(3, auto);
+
+}
+.tools>li:nth-child(5){
+    border-bottom: none;
 }
 
 
@@ -197,7 +206,6 @@ body {
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(132, 0, 255, 0.687);
 }
-
 
 
 
