--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -198,11 +198,11 @@ body {
   display: block;
   padding: 12px;
   text-decoration: none;
-  color: #ccc;
+
 }
 
 .dropdown-link.active {
-  background: rgba(132, 0, 255, 0.687);
+  background: rgba(132, 0, 255, 0.813);
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(132, 0, 255, 0.687);
 }
@@ -527,4 +527,100 @@ body {
     cursor: pointer;
     display: none;
 }
+/*-------------------------------------SpotTrade-----------------------------------------*/
+.tradespot {
+    margin-top: 60px;
+    display: flex;
+    width: 100%;
+    height: calc(100vh - 60px);
+    background-color: #111;
+}
 
+
+/* MAIN AREA */
+.tradespot {
+    flex: 1;
+    display: flex;
+    gap: 40px;
+    padding: 20px;
+    background: linear-gradient(180deg, #5b6af0 0%,
+    #341a93 40%,
+    #050506 100%); 
+    
+}
+.tradespot .main{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+
+
+}
+
+/* CHART AREA (Cinema style) */
+.tradespot .main .chart {
+    flex: 1;
+    min-width: 600px;
+    max-width: 2400px;
+    background-color: #000;
+    border-radius: 12px;
+    box-shadow: 0 2px 30px rgba(74, 10, 138, 0.6);
+    overflow: hidden;
+    display: flex;
+}
+
+/* TRANSACTION BAR */
+.tradespot .main .TransactionSpotBar {
+    height: 200px;
+    margin-top: 16px;
+    background-color: #000;
+    border-radius: 10px;
+    box-shadow: 0 5px 30px rgba(74, 10, 138, 0.6);
+}
+
+.sidebar {
+  background-color: #111111;
+  min-width: 20%;
+  box-shadow: 0 2px 30px rgba(74, 10, 138, 0.6);
+  border-radius: 10px;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  overflow: hidden;
+  
+}
+
+/* Header row */
+.sidebar-header {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr;
+  padding: 10px;
+  font-weight: 600;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.409);
+}
+
+/* Crypto list */
+.crypto_pairs {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+/* Each pair row */
+.pair-row {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr;
+  padding: 8px 10px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.2s ease;
+
+  
+}
+
+.pair-row:hover {
+  background-color: rgba(255,255,255,0.1);
+  transform: translateX(5px);
+}
