--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -1046,3 +1046,126 @@ body {
   height: 24px;
 }
 
+/*---------------------------Signup /Login ------------------------------*/
+.auth-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.65);
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Modal box */
+.auth-modal {
+  width: 460px; /* wider */
+  min-height: 360px; /* more breathing room */
+  background: #171717;
+  border: 1px solid rgba(255,255,255,0.08);
+  border-radius: 12px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  position: relative;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.8);
+}
+
+/* Close button */
+.auth-close {
+  position: absolute;
+  top: 14px;
+  right: 18px;
+  background: none;
+  border: none;
+  color: #bbb;
+  font-size: 20px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.auth-close:hover {
+  color: white;
+}
+
+/* Tabs */
+.auth-tabs {
+  display: flex;
+  gap: 22px;
+  border-bottom: 1px solid rgba(255,255,255,0.07);
+  padding-bottom: 10px;
+  margin-bottom: 6px;
+}
+
+.auth-tabs button {
+  background: transparent;
+  border: none;
+  color: #aaa;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 6px 0;
+}
+
+.auth-tabs button.active {
+  color: white;
+  border-bottom: 2px solid #8a53f6; /* Binance accent */
+}
+
+/* Form layout */
+.auth-form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-top: 6px;
+}
+
+/* Inputs */
+.auth-input {
+  width: 100%;
+  padding: 12px 14px;
+  background: #0f0f0f;
+  border: 1px solid rgba(255,255,255,0.12);
+  border-radius: 8px;
+  color: white;
+  font-size: 15px;
+  
+}
+
+.auth-input:focus {
+  outline: none;
+  border: 1px solid #8a53f6;
+}
+
+/* Submit button */
+.auth-submit {
+  background: #8a53f6;
+  border: none;
+  padding: 12px 0;
+  border-radius: 8px;
+  color: #000;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.15s;
+  position: absolute;
+  bottom:20px;
+  width:90%;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.auth-submit:hover {
+  filter: brightness(0.8);
+}
+
+.new-user{
+  font-size: 14px;
+  color:#8a53f6;
+  cursor: pointer;
+  margin-left: 4px;background-color: #00000000;
+  border: none;
+}
+
